fix: merge [DHIS2-18884]
Signed-off-by: Giuseppe Nespolino <g.nespolino@gmail.com>